@@ -919,66 +919,3 @@ bool EQLimits::CoinHasWeight(ClientVersion clientVersion)
 
 	return local[static_cast<unsigned int>(ValidateMobClientVersion(clientVersion))];
 }
-
-uint32 EQLimits::BandoliersCount(ClientVersion clientVersion)
-{
-	static const uint32 local[CLIENT_VERSION_COUNT] = {
-/*Unknown*/		NOT_USED,
-/*62*/			NOT_USED,
-/*Titanium*/	EmuConstants::BANDOLIERS_SIZE,
-/*SoF*/			EmuConstants::BANDOLIERS_SIZE,
-/*SoD*/			EmuConstants::BANDOLIERS_SIZE,
-/*Underfoot*/	EmuConstants::BANDOLIERS_SIZE,
-/*RoF*/			EmuConstants::BANDOLIERS_SIZE,
-/*RoF2*/		EmuConstants::BANDOLIERS_SIZE,
-
-/*NPC*/			NOT_USED,
-/*Merc*/		NOT_USED,
-/*Bot*/			NOT_USED,
-/*Pet*/			NOT_USED
-	};
-
-	return local[static_cast<unsigned int>(ValidateMobClientVersion(clientVersion))];
-}
-
-uint32 EQLimits::BandolierSize(ClientVersion clientVersion)
-{
-	static const uint32 local[CLIENT_VERSION_COUNT] = {
-/*Unknown*/		NOT_USED,
-/*62*/			NOT_USED,
-/*Titanium*/	EmuConstants::BANDOLIER_ITEM_COUNT,
-/*SoF*/			EmuConstants::BANDOLIER_ITEM_COUNT,
-/*SoD*/			EmuConstants::BANDOLIER_ITEM_COUNT,
-/*Underfoot*/	EmuConstants::BANDOLIER_ITEM_COUNT,
-/*RoF*/			EmuConstants::BANDOLIER_ITEM_COUNT,
-/*RoF2*/		EmuConstants::BANDOLIER_ITEM_COUNT,
-
-/*NPC*/			NOT_USED,
-/*Merc*/		NOT_USED,
-/*Bot*/			NOT_USED,
-/*Pet*/			NOT_USED
-	};
-
-	return local[static_cast<unsigned int>(ValidateMobClientVersion(clientVersion))];
-}
-
-uint32 EQLimits::PotionBeltSize(ClientVersion clientVersion)
-{
-	static const uint32 local[CLIENT_VERSION_COUNT] = {
-/*Unknown*/		NOT_USED,
-/*62*/			NOT_USED,
-/*Titanium*/	EmuConstants::POTION_BELT_ITEM_COUNT,
-/*SoF*/			EmuConstants::POTION_BELT_ITEM_COUNT,
-/*SoD*/			EmuConstants::POTION_BELT_ITEM_COUNT,
-/*Underfoot*/	EmuConstants::POTION_BELT_ITEM_COUNT,
-/*RoF*/			EmuConstants::POTION_BELT_ITEM_COUNT,
-/*RoF2*/		EmuConstants::POTION_BELT_ITEM_COUNT,
-
-/*NPC*/			NOT_USED,
-/*Merc*/		NOT_USED,
-/*Bot*/			NOT_USED,
-/*Pet*/			NOT_USED
-	};
-
-	return local[static_cast<unsigned int>(ValidateMobClientVersion(clientVersion))];
-}
